--- a/index.html
+++ b/index.html
@@ -54,68 +54,21 @@
           class="lg:flex flex-grow items-center bg-white lg:bg-transparent lg:shadow-none hidden"
           id="example-collapse-navbar"
         >
-          <!-- <ul class="flex flex-col lg:flex-row list-none mr-auto">
-              <li class="flex items-center">
-                <a class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold" 
-                href="https://www.creative-tim.com/learning-lab/tailwindcss-starter-project#/landing">
-                Icon
-                <i class="lg:text-gray-300 text-gray-500 far fa-file-alt text-lg leading-lg mr-2"></i>
-                Docs
-                </a>
-              </li>
-            </ul> -->
-          <!-- Nav Right Side -->
           <ul class="flex flex-col lg:flex-row list-none lg:ml-auto">
             <!-- Social Media Button -->
             <li class="flex items-center">
               <a
                 class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-                href="#pablo"
+                href="https://github.com/Naimish100"
+                target="_blank"
               >
                 <!-- Icon -->
                 <i
-                  class="lg:text-gray-300 text-gray-500 fab fa-facebook text-lg leading-lg"
+                  class="fab fa-github bg-white text-gray-900 shadow-lg font-sm p-1 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2 inline-block text-center"
                 ></i>
-                <span class="lg:hidden inline-block ml-2">Share</span>
+                <span class="lg:hidden inline-block ml-2">Github</span>
               </a>
             </li>
-            <!-- Social Media Button -->
-            <li class="flex items-center">
-              <a
-                class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-                href="#pablo"
-              >
-                <!-- Icon -->
-                <i
-                  class="lg:text-gray-300 text-gray-500 fab fa-twitter text-lg leading-lg"
-                ></i>
-                <span class="lg:hidden inline-block ml-2">Tweet</span>
-              </a>
-            </li>
-            <!-- Social Media Button -->
-            <li class="flex items-center">
-              <a
-                class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
-                href="#pablo"
-              >
-                <!-- Icon -->
-                <i
-                  class="lg:text-gray-300 text-gray-500 fab fa-github text-lg leading-lg"
-                ></i>
-                <span class="lg:hidden inline-block ml-2">Star</span>
-              </a>
-            </li>
-            <!-- Button -->
-            <!-- <li class="flex items-center">
-            <button
-              class="bg-white text-gray-800 active:bg-gray-100 text-xs font-bold uppercase px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none lg:mr-1 lg:mb-0 ml-3 mb-3"
-              type="button"
-              style="transition: all 0.15s ease 0s;">
-              Icon
-              <i class="fas fa-arrow-alt-circle-down"></i>
-              Download
-            </button>
-          </li> -->
           </ul>
         </div>
       </div>
@@ -303,11 +256,7 @@
                 repellat obcaecati tenetur officia distinctio! A voluptates
                 numquam, neque libero molestiae natus facere temporibus!
               </p>
-              <a
-                href="https://www.creative-tim.com/framework/tailwind-starter-kit"
-                class="font-bold text-gray-800 mt-8"
-                >Check Tailwind Starter Kit!
-              </a>
+              <a href="#" class="font-bold text-gray-800 mt-8">Read more! </a>
             </div>
 
             <!-- Image Cap & Text Card -->
